add images for website, fix views

--- a/static/styles-455.css
+++ b/static/styles-455.css
@@ -18301,7 +18301,7 @@ td.season-result-table-left-column {
 }
 
 .hd_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .hd_type12 {
@@ -18478,13 +18478,13 @@ td.season-result-table-left-column {
 .hd_pressed,
 .hd_pressed.hint-extra,
 .hd_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .hd_check,
 .hd_check.hint-extra,
 .hd_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .hd_flag,
@@ -18659,7 +18659,7 @@ td.season-result-table-left-column {
 }
 
 .nnhd_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .nnhd_type12 {
@@ -18761,13 +18761,13 @@ td.season-result-table-left-column {
 .nnhd_pressed,
 .nnhd_pressed.hint-extra,
 .nnhd_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .nnhd_check,
 .nnhd_check.hint-extra,
 .nnhd_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .nnhd_flag,
@@ -18942,7 +18942,7 @@ td.season-result-table-left-column {
 }
 
 .rc_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .rc_type12 {
@@ -18972,13 +18972,13 @@ td.season-result-table-left-column {
 .rc_pressed,
 .rc_pressed.hint-extra,
 .rc_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .rc_check,
 .rc_check.hint-extra,
 .rc_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .rc_flag,
@@ -19165,7 +19165,7 @@ td.season-result-table-left-column {
 }
 
 .al_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .al_type12 {
@@ -19195,13 +19195,13 @@ td.season-result-table-left-column {
 .al_pressed,
 .al_pressed.hint-extra,
 .al_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .al_check,
 .al_check.hint-extra,
 .al_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .al_flag,
@@ -19458,7 +19458,7 @@ td.season-result-table-left-column {
 }
 
 .alr_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .alr_type12 {
@@ -19488,13 +19488,13 @@ td.season-result-table-left-column {
 .alr_pressed,
 .alr_pressed.hint-extra,
 .alr_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .alr_check,
 .alr_check.hint-extra,
 .alr_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .alr_flag,
@@ -19681,7 +19681,7 @@ td.season-result-table-left-column {
 }
 
 .gs_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .gs_type12 {
@@ -19711,13 +19711,13 @@ td.season-result-table-left-column {
 .gs_pressed,
 .gs_pressed.hint-extra,
 .gs_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .gs_check,
 .gs_check.hint-extra,
 .gs_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .gs_flag,
@@ -19914,7 +19914,7 @@ td.season-result-table-left-column {
 }
 
 .gsr_type11 {
-   background-image: url(/img/skins/hd/mine_red.svg?v=3)
+   background-image: url(/mine_red.svg)
 }
 
 .gsr_type12 {
@@ -19944,13 +19944,13 @@ td.season-result-table-left-column {
 .gsr_pressed,
 .gsr_pressed.hint-extra,
 .gsr_pressed.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .gsr_check,
 .gsr_check.hint-extra,
 .gsr_check.hint-to-open {
-   background-image: url(/img/skins/hd/pressed.svg?v=3)
+   background-image: url(/pressed.svg)
 }
 
 .gsr_flag,
