--- a/views/beginner.ejs
+++ b/views/beginner.ejs
@@ -192,22 +192,6 @@
                         </div>
                         <div class="clearfix"></div>
                      </div>
-                     <div class="wrapper-pavel-outside">
-                        <div class="wrapper-pavel-inside" style="right: 30px;">
-                           <div id="W6"><span id="hint_btn_wrapper"><a id="hint_btn" href="javascript:void(0)"
-                                    class="btn btn-sm btn-default btn-hint" title="" data-original-title="Hint"><i
-                                       class="fa fa-magic"></i></a></span>&nbsp;&nbsp;<button id="restart_btn"
-                                 class="btn btn-sm btn-default btn-hint disabled" title=""
-                                 data-original-title="Continue playing"><i
-                                    class="fa fa-rotate-right"></i></button>&nbsp;&nbsp;<a id="edit_btn"
-                                 href="javascript:void(0)" target="_blank"
-                                 class="btn btn-sm btn-default btn-hint btn-paint" title=""
-                                 data-original-title="Open in the editor"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;<a
-                                 id="screen_btn" href="javascript:void(0)" target="_blank"
-                                 class="btn btn-sm btn-default btn-hint" title="" data-original-title="Screenshot"><i
-                                    class="fa fa-camera-retro"></i></a></div>
-                        </div>
-                     </div>
                   </div>
                </td>
                <td>
@@ -217,16 +201,19 @@
                            Time: <strong id="game_time"></strong> sec<br>
                            Clicks: <strong id="clicks"></strong><br><br>
                         </div>
-                        <div>Activity: +1<span class="help" title="" data-original-title="Activity"><img
-                                 src="activity-24282.svg" class="activity-icon icon-right"
-                                 alt="⚡"></span><br>Experience: +24<img src="exp_icon.png" height="18" width="28">
+                        <div>
+                           Activity: +1<span class="help" title="" data-original-title="Activity"><img
+                                 src="activity-24282.svg" class="activity-icon icon-right" alt="⚡"></span>
+                           <br>Experience: +24
+                           <i class="glyphicon glyphicon-star exp-icon icon-small"></i>
                            <br>Honour points: +1<span class="help" title="" data-original-title="Honour points"><img
-                                 src="hp.svg" class="hp-icon icon-right" alt="🌟"></span><br>Minecoins: +2<i
-                              class="fa fa-circle coin-icon icon-right"></i><br><span class="help" title=""
+                                 src="hp.svg" class="hp-icon icon-right" alt="🌟"></span>
+                           <br>Minecoins: +2<i class="fa fa-circle coin-icon icon-right"></i>
+                           <br><span class="help" title=""
                               data-original-title="Mastery is calculated as the number of wins out of 100 consecutive games">Mastery</span>:
                            <a class="black-link" href="/mastery/2437498546">
-                              <img src="victory.png" height="16" width="16">
-                              90</a><br><span class="help" title=""
+                              <i class="glyphicon glyphicon-flash mastery-icon icon-small mastery1"></i>90</a>
+                           <br><span class="help" title=""
                               data-original-title="Win streak is a consecutive sequence of won games">Win streak</span>:
                            <a class="black-link" href="/winstreak/2437498546"><i
                                  class="fa fa-crosshairs ws-icon ws1"></i>19</a><br><br>
