--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,9 @@
       shows the number of mines adjacent to it. Using this information, you can determine cells
       that are safe, and cells that contain mines. Cells suspected of being mines can be marked
       with a flag using the right mouse button.</p>
-   <p>Read more:&nbsp; <a href="/help/gameplay" class="text-nowrap"><i
-            class="fa fa-book icon-book"></i>Gameplay</a>&nbsp;&nbsp; <a href="https://minesweeper.online/help/patterns"
-         class="text-nowrap"><i class="fa fa-book icon-book"></i>Patterns</a>&nbsp;&nbsp; <a
-         href="https://minesweeper.online/help/efficiency" class="text-nowrap"><i
-            class="fa fa-book icon-book"></i>Efficiency</a>&nbsp;&nbsp;</p><br>
+   <p>Read more:&nbsp; <a href="/help/gameplay" class="text-nowrap">
+         <i class="fa fa-book icon-book"></i>Gameplay</a>&nbsp;&nbsp; <a href="/help/patterns"
+         class="text-nowrap"><i class="fa fa-book icon-book"></i>Patterns</a>&nbsp;&nbsp;</p><br>
    <h2 class="homepage-h2">Various playing styles</h2>
    <hr class="homepage-hr">
    <p class="homepage-text">Despite the simple rules, there are many ways to play minesweeper.
