--- a/views/layout_main_up.ejs
+++ b/views/layout_main_up.ejs
@@ -10,6 +10,7 @@
    <title>Minesweeper: <%-subtitle %></title>
    <link rel="image_src" href="/img/icons/og-image-300x300.png">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
    <link rel="icon" type="image/png" href="/img/icons/favicon-32x32.png" sizes="32x32">
    <link rel="icon" type="image/png" href="/img/icons/android-chrome-192x192.png" sizes="192x192">
    <link rel="icon" type="image/png" href="/img/icons/favicon-96x96.png" sizes="96x96">
