--- a/views/layout_main_up.ejs
+++ b/views/layout_main_up.ejs
@@ -173,6 +173,10 @@
                               class="menu-link link_new_game_ng"><span>Expert</span></a>
                         </li>
                         <li>
+                           <i class="fa fa-angle-double-right sub-nav-angle text-primary"></i><a href="/custom"
+                              class="menu-link link_new_game_ng"><span>Custom</span></a>
+                        </li>
+                        <li>
                            <i class="fa fa-angle-double-right sub-nav-angle text-primary"></i><a href="/ranking"
                               class="menu-link link_ranking link_ranking_ng"><span>Ranking</span></a>
                         </li>
